--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.31</version>
+<!--            <version>8.0.31</version>-->
+            <version>5.1.49</version>
             <scope>runtime</scope>
         </dependency>
 
