--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-<!--            <version>8.0.31</version>-->
-            <version>5.1.49</version>
+            <version>8.0.31</version>
+<!--            <version>5.1.49</version>-->
             <scope>runtime</scope>
         </dependency>
 
@@ -83,6 +83,10 @@
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
             <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 
