--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,9 @@ spring:
         max-wait: 1ms  #连接池最大阻塞等待时间
         max-idle: 4    #连接池中最大空闲连接数
         min-idle: 0    #连接池中最小空闲连接数
-
+  cache:
+    redis:
+      time-to-live: 1800000   #设置缓存过期时间，单位为毫秒，设置为1800秒，也就是30分钟
 mybatis-plus:
   configuration:
     #mybatis-plus日志输出
