--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.31</version>
-<!--            <version>5.1.49</version>-->
+<!--            <version>8.0.31</version>-->
+            <version>5.1.49</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -91,6 +91,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>4.0.0-RC1</version>
         </dependency>
     </dependencies>
 
