--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,19 @@
 server:
-  port: 8080
+  port: 8081
 
 
 spring:
   application:
     #项目名称，可选
     name: elema
-#  datasource:
-#    druid:
-##      driver-class-name: com.mysql.cj.jdbc.Driver
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
 #      driver-class-name: com.mysql.jdbc.Driver
-##      url: jdbc:mysql://localhost:3307/elema?serverTimezone=UTC
+      url: jdbc:mysql://localhost:3307/elema?serverTimezone=UTC
 #      url: jdbc:mysql://localhost:3306/elema
-#      username: root
-#      password: password
+      username: root
+      password: password
 
 #  Redis相关配置
   redis:
@@ -32,37 +32,37 @@ spring:
   cache:
     redis:
       time-to-live: 1800000   #设置缓存过期时间，单位为毫秒，设置为1800秒，也就是30分钟
-
-  shardingsphere:
-    datasource:
-      names:
-        master,slave
-      # 主数据源
-      master:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.30.130:3306/elema?characterEncoding=utf-8&useSSL=false
-        username: root
-        password: password
-      # 从数据源
-      slave:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.30.131:3306/elema?characterEncoding=utf-8&useSSL=false
-        username: root
-        password: password
-    masterslave:
-      # 读写分离配置
-      load-balance-algorithm-type: round_robin #轮询
-      # 最终的数据源名称
-      name: dataSource
-      # 主库数据源名称
-      master-data-source-name: master
-      # 从库数据源名称列表，多个逗号分隔
-      slave-data-source-names: slave
-    props:
-      sql:
-        show: true #开启SQL显示，默认false
+#数据库主从库相关配置
+#  shardingsphere:
+#    datasource:
+#      names:
+#        master,slave
+#      # 主数据源
+#      master:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driver-class-name: com.mysql.jdbc.Driver
+#        url: jdbc:mysql://192.168.30.130:3306/elema?characterEncoding=utf-8&useSSL=false
+#        username: root
+#        password: password
+#      # 从数据源
+#      slave:
+#        type: com.alibaba.druid.pool.DruidDataSource
+#        driver-class-name: com.mysql.jdbc.Driver
+#        url: jdbc:mysql://192.168.30.131:3306/elema?characterEncoding=utf-8&useSSL=false
+#        username: root
+#        password: password
+#    masterslave:
+#      # 读写分离配置
+#      load-balance-algorithm-type: round_robin #轮询
+#      # 最终的数据源名称
+#      name: dataSource
+#      # 主库数据源名称
+#      master-data-source-name: master
+#      # 从库数据源名称列表，多个逗号分隔
+#      slave-data-source-names: slave
+#    props:
+#      sql:
+#        show: true #开启SQL显示，默认false
   main:
     allow-bean-definition-overriding: true
 mybatis-plus:
